name:                chapter02
version:             1.0.0.0
synopsis:            Modern Compiler Implementation in ML (Chapter 2)
description:         Lexical Analysis
homepage:            https://github.com/svenpanne/tiger
license:             BSD3
license-file:        ../LICENSE
author:              Sven Panne
maintainer:          svenpanne@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable lexer
  main-is:             Main.hs
  build-depends:       base >=4.3 && <5, chapter02
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  build-depends:       base >=4.3 && <5, array >=0.5 && <0.6
  hs-source-dirs:      src
  exposed-modules:     Lexer
  default-language:    Haskell2010
  ghc-options:         -Wall
