name:                chapter03
version:             1.0.0.0
synopsis:            Modern Compiler Implementation in ML (Chapter 3)
description:         Parsing
homepage:            https://github.com/svenpanne/tiger
license:             BSD3
license-file:        ../LICENSE
author:              Sven Panne
maintainer:          svenpanne@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable parser
  main-is:             Main.hs
  build-depends:       base >=4.3 && <5, chapter03
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  build-depends:       base >=4.3 && <5, array >=0.3 && <0.6
  hs-source-dirs:      src
  exposed-modules:     Lexer, Parser
  default-language:    Haskell2010
  ghc-options:         -Wall
