name:                chapter04
version:             1.0.0.0
synopsis:            Modern Compiler Implementation in ML (Chapter 4)
description:         Abstract Syntax
homepage:            https://github.com/svenpanne/tiger
license:             BSD3
license-file:        ../LICENSE
author:              Sven Panne
maintainer:          svenpanne@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable parser
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, chapter04
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  build-depends:       base >=4.7 && <4.8, array >=0.5 && <0.6, transformers >=0.3 && <0.4
  hs-source-dirs:      src
  exposed-modules:     Lexer, DOT, AbSyn, Parser
  default-language:    Haskell2010
  ghc-options:        -Wall
