name:                chapter05
version:             1.0.0.0
synopsis:            Modern Compiler Implementation in ML (Chapter 5)
description:         Semantic Analysis
homepage:            https://github.com/svenpanne/tiger
license:             BSD3
license-file:        ../LICENSE
author:              Sven Panne
maintainer:          svenpanne@gmail.com
category:            Compiler
build-type:          Simple
cabal-version:       >=1.10

executable parser
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8, chapter05
  build-tools:         alex, happy
  default-language:    Haskell2010
  ghc-options:         -Wall

library
  build-depends:       base >=4.7 && <4.8,
                       array >=0.5 && <0.6,
                       hashable >=1.2 && <1.3,
                       transformers >=0.3 && <0.4,
                       unordered-containers >=0.2 && <0.3
  hs-source-dirs:      src
  exposed-modules:     Symbol, Lexer, DOT, AbSyn, Parser, Types, Env, Semant
  default-language:    Haskell2010
  ghc-options:         -Wall
